--- a/daniel_db/indexMAIN.html
+++ b/daniel_db/indexMAIN.html
@@ -40,7 +40,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="/daniel_db/dani4.php">Cuatro</a>
                             <a class="dropdown-item" href="/daniel_db/dani5.php">Cinco</a>
-                            <a class="dropdown-item" href="/daniel_db/dani6.php">Seis</a>
+                            <a class="dropdown-item" href="./dani6a.html">Seis</a>
                         </div>
                     </li>
 
@@ -49,9 +49,9 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Unidad 3</a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="/daniel_db/dani7.php">Siete</a>
-                            <a class="dropdown-item" href="/daniel_db/dani8.php">Ocho</a>
-                            <a class="dropdown-item" href="/daniel_db/dani9.php">Nueve</a>
+                            <a class="dropdown-item" href="./dani7a.html">Siete</a>
+                            <a class="dropdown-item" href="./dani8.html">Ocho</a>
+                            <a class="dropdown-item" href="./dani9.html">Nueve</a>
                         </div>
                     </li>
 
