--- a/daniel_db/indexMAIN.html
+++ b/daniel_db/indexMAIN.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-light navbarBg">
         <div class="container">
-            <a class="navbar-brand in" href="/daniel_db/indexMAIN.html" style="color: white;">Inicio</a>
+            <a class="navbar-brand in" href="index.html" style="color: white;">Inicio</a>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="nav navbar-nav">
